...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="Update the item's price:"/>
            <EditText
                android:id="@+id/edit_listing_price_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                        android:textAlignment="center"
                        android:textColor="#E1E1E1"
                        android:textStyle="bold"
                        android:textSize="18dp"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/edit_listing_update_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/purple_700"
                    android:layout_marginTop="25dp"
                    app:cardCornerRadius="100dp">
                    <TextView
...
