<resources>
    <string name="app_name">ISU_Swap</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>