<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="Home"/>

    <item
        android:id="@+id/nav_profile"
        android:title="Profile"/>

    <item
        android:id="@+id/nav_inbox"
        android:title="Inbox"/>

    <item
        android:id="@+id/nav_settings"
        android:title="Settings"/>

</menu>