<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_send"
        android:icon="@drawable/ic_baseline_send_24"
        android:title="Send"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.Button" />

</menu>